<?xml version="1.0"?>
<package format="2">
  <name>comau_ik_solver_ros</name>
  <version>0.0.0</version>
  <description>The comau_ik_solver_ros package</description>

  <maintainer email="nicola.pedrocchi@stiima.cnr.it">Nicola Pedrocchi</maintainer>

  <license>BSD-3</license>

  <!-- <url type="website">http://wiki.ros.org/comau_ik_solver_ros</url> -->

  <author email="nicola.pedrocchi@stiima.cnr.it">Nicola Pedrocchi</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ik_solver</build_depend>
  <build_depend>comau_ik_solver</build_depend>
  <build_depend>ik_solver_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>ik_solver</build_export_depend>
  <build_export_depend>comau_ik_solver</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>ik_solver_ros</build_export_depend>
  <exec_depend>comau_ik_solver</exec_depend>
  <exec_depend>roscpp</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <ik_solver plugin="${prefix}/plugin.xml"/>
  </export>
</package>
